--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <p>Wesby is a generic linked open data visualization tool developed with Play! Framework.</p>
 
 <h2>
-<a name="quick-start" class="anchor" href="#quick-start"><span class="octicon octicon-link"></span></a>Quick start</h2>
+<a name="quick-start-with-activator" class="anchor" href="#quick-start-with-activator"><span class="octicon octicon-link"></span></a>Quick start with Activator</h2>
 
 <ol>
 <li>Clone <a href="https://github.com/weso/Wesby">Wesby repository</a>
@@ -47,6 +47,17 @@
 </li>
 <li>Get Typesafe Activator from <a href="http://www.playframework.com/download">Play! Framework</a> and unzip it to a directory</li>
 <li>Run Activator and import the Wesby directory</li>
+</ol><h2>
+<a name="quick-start-with-play" class="anchor" href="#quick-start-with-play"><span class="octicon octicon-link"></span></a>Quick start with Play!</h2>
+
+<ol>
+<li>
+<a href="http://www.playframework.com/download">Download</a> and <a href="http://www.playframework.com/documentation/2.2.x/Installing">install</a> Play! Framework.</li>
+<li><code>mkdir Wesby</code></li>
+<li><code>cd Wesby</code></li>
+<li><code>git clone https://github.com/weso/Wesby.git</code></li>
+<li><code>play</code></li>
+<li><code>run</code></li>
 </ol><p>Develop: <a href="https://travis-ci.org/weso/Wesby"><img src="https://api.travis-ci.org/weso/Wesby.png?branch=develop" alt="Build Status"></a></p>
         </section>
 
