Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
 <p>Wesby is a generic linked open data visualization tool developed with Play! Framework.</p>
 
+<p>by <a href="www.weso.es">WESO</a></p>
+
 <h2>
 <a name="quick-start-with-activator" class="anchor" href="#quick-start-with-activator"><span class="octicon octicon-link"></span></a>Quick start with Activator</h2>
 
