Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,12 +31,15 @@
         <hr>
 
         <section id="main_content">
-          <p><img src="https://raw.github.com/weso/Wesby/develop/public/images/wesby-logo-850.png"></p>
+          <p><img src="https://raw.github.com/weso/Wesby/develop/public/images/wesby-logo-850.png" alt="Wesby logo"></p>
 
 <h1>
-<a name="wesby---lod-viewer" class="anchor" href="#wesby---lod-viewer"><span class="octicon octicon-link"></span></a>Wesby - LOD Viewer</h1>
+<a name="wesby---lod-viewer-" class="anchor" href="#wesby---lod-viewer-"><span class="octicon octicon-link"></span></a>Wesby - LOD Viewer <a href="https://travis-ci.org/weso/Wesby"><img src="https://api.travis-ci.org/weso/Wesby.png?branch=develop" alt="Build Status"></a>
+</h1>
 
-<p>Wesby is a generic linked open data visualization tool developed with Play! Framework.</p>
+<blockquote>
+<p>Wesby is a linked data frontend that wraps your RDF resources with custom-built interfaces, effectively turning your SPARQL endpoints into rich HTML5 websites.</p>
+</blockquote>
 
 <p>by <a href="www.weso.es">WESO</a></p>
 
@@ -44,23 +47,12 @@
 <a name="quick-start-with-activator" class="anchor" href="#quick-start-with-activator"><span class="octicon octicon-link"></span></a>Quick start with Activator</h2>
 
 <ol>
-<li>Clone <a href="https://github.com/weso/Wesby">Wesby repository</a>
-<code>https://github.com/weso/Wesby.git</code>
-</li>
-<li>Get Typesafe Activator from <a href="http://www.playframework.com/download">Play! Framework</a> and unzip it to a directory</li>
-<li>Run Activator and import the Wesby directory</li>
-</ol><h2>
-<a name="quick-start-with-play" class="anchor" href="#quick-start-with-play"><span class="octicon octicon-link"></span></a>Quick start with Play!</h2>
-
-<ol>
-<li>
-<a href="http://www.playframework.com/download">Download</a> and <a href="http://www.playframework.com/documentation/2.2.x/Installing">install</a> Play! Framework.</li>
-<li><code>mkdir Wesby</code></li>
-<li><code>cd Wesby</code></li>
+<li><a href="http://www.playframework.com/documentation/latest/Installing">Install Play! Framework Activator</a></li>
+<li><a href="http://git-scm.com/book/en/Getting-Started-Installing-Git">Install Git</a></li>
 <li><code>git clone https://github.com/weso/Wesby.git</code></li>
-<li><code>play</code></li>
-<li><code>run</code></li>
-</ol><p>Develop: <a href="https://travis-ci.org/weso/Wesby"><img src="https://api.travis-ci.org/weso/Wesby.png?branch=develop" alt="Build Status"></a></p>
+<li><code>cd Wesby</code></li>
+<li><code>activator run</code></li>
+</ol>
         </section>
 
         <footer>
