--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
         <hr>
 
         <section id="main_content">
-          <p><img src="https://raw.github.com/weso/Wesby/develop/public/images/wesby-logo-850.png" alt="Wesby logo"></p>
-
-<h1>
-<a name="wesby---lod-viewer-" class="anchor" href="#wesby---lod-viewer-"><span class="octicon octicon-link"></span></a>Wesby - LOD Viewer <a href="https://travis-ci.org/weso/Wesby"><img src="https://api.travis-ci.org/weso/Wesby.png?branch=develop" alt="Build Status"></a>
-</h1>
+          <p><img src="https://raw.github.com/weso/Wesby/develop/public/images/wesby-logo-850.png" alt="Wesby logo"><a href="https://travis-ci.org/weso/Wesby"><img src="https://api.travis-ci.org/weso/Wesby.png?branch=develop" alt="Build Status"></a></p>
 
 <blockquote>
 <p>Wesby is a linked data frontend that wraps your RDF resources with custom-built interfaces, effectively turning your SPARQL endpoints into rich HTML5 websites.</p>
