--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <hr>
 
         <section id="main_content">
-          <p><img src="https://raw.github.com/weso/Wesby/develop/public/images/wesby-logo-850.png" alt="Wesby logo"><a href="https://travis-ci.org/weso/Wesby"><img src="https://api.travis-ci.org/weso/Wesby.png?branch=develop" alt="Build Status"></a></p>
+          <p><img src="https://raw.github.com/weso/Wesby/develop/public/images/wesby-logo-850.png" alt="Wesby logo"></p>
 
 <blockquote>
 <p>Wesby is a linked data frontend that wraps your RDF resources with custom-built interfaces, effectively turning your SPARQL endpoints into rich HTML5 websites.</p>
 </blockquote>
 
-<p>by <a href="www.weso.es">WESO</a></p>
+<p><a href="https://travis-ci.org/weso/Wesby"><img src="https://api.travis-ci.org/weso/Wesby.png?branch=develop" alt="Build Status"></a> by <a href="www.weso.es">WESO</a></p>
 
 <h2>
 <a name="quick-start-with-activator" class="anchor" href="#quick-start-with-activator"><span class="octicon octicon-link"></span></a>Quick start with Activator</h2>
