Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
 <p><a href="https://travis-ci.org/weso/Wesby"><img src="https://api.travis-ci.org/weso/Wesby.png?branch=develop" alt="Build Status"></a> by <a href="www.weso.es">WESO</a></p>
 
 <h2>
+<a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h2>
+
+<ul>
+<li>RDF retrieval from SPARQL endpoint</li>
+<li>Resource caching with <a href="http://memcached.org/">Memcached</a>
+</li>
+<li>Result queries conversion to Json for easy Javascript access to data</li>
+<li>User defined template binding for RDF types</li>
+<li>Logic-less templates with HTML5 and <a href="http://mustache.github.io/">Mustache</a>
+</li>
+</ul><h2>
 <a name="quick-start-with-activator" class="anchor" href="#quick-start-with-activator"><span class="octicon octicon-link"></span></a>Quick start with Activator</h2>
 
 <ol>
