--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
 <li><code>git clone https://github.com/weso/Wesby.git</code></li>
 <li><code>cd Wesby</code></li>
 <li><code>activator run</code></li>
-</ol>
+</ol><h3>
+<a name="technical-documentation-and-user-manual-on-github" class="anchor" href="#technical-documentation-and-user-manual-on-github"><span class="octicon octicon-link"></span></a>Technical documentation and user manual on <a href="https://github.com/weso/Wesby">Github</a>
+</h3>
         </section>
 
         <footer>
