Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <hr>
 
         <section id="main_content">
-          <p><img src="https://raw.github.com/weso/Wesby/develop/public/images/wesby-logo-850.png" alt="Wesby logo"></p>
+          <p><img src="https://github.com/weso/Wesby/raw/develop/public/images/wesby-logo.png" alt="Wesby logo"></p>
 
 <blockquote>
 <p>Wesby is a linked data frontend that wraps your RDF resources with custom-built interfaces, effectively turning your SPARQL endpoints into rich HTML5 websites.</p>
@@ -59,9 +59,9 @@
 <li><code>git clone https://github.com/weso/Wesby.git</code></li>
 <li><code>cd Wesby</code></li>
 <li><code>activator run</code></li>
-</ol><h4>
-<a name="technical-documentation-and-user-manual-on-github" class="anchor" href="#technical-documentation-and-user-manual-on-github"><span class="octicon octicon-link"></span></a>Technical documentation and user manual on <a href="https://github.com/weso/Wesby">Github</a>
-</h4>
+<li>Read the <a href="https://github.com/weso/Wesby/wiki">docs</a>
+</li>
+</ol>
         </section>
 
         <footer>
