Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <p>Wesby is a linked data frontend that wraps your RDF resources with custom-built interfaces, effectively turning your SPARQL endpoints into rich HTML5 websites.</p>
 </blockquote>
 
-<p><a href="https://travis-ci.org/weso/Wesby"><img src="https://api.travis-ci.org/weso/Wesby.png?branch=develop" alt="Build Status"></a> by <a href="www.weso.es">WESO</a></p>
+<p><a href="https://travis-ci.org/weso/Wesby"><img src="https://api.travis-ci.org/weso/Wesby.png?branch=develop" alt="Build Status"></a> by <a href="http://www.weso.es">WESO</a></p>
 
 <h2>
 <a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h2>
