--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <li>User defined template binding for RDF types</li>
 <li>Logic-less templates with HTML5 and <a href="http://mustache.github.io/">Mustache</a>
 </li>
+<li>Dereferenceable URIs</li>
 </ul><h2>
 <a name="quick-start-with-activator" class="anchor" href="#quick-start-with-activator"><span class="octicon octicon-link"></span></a>Quick start with Activator</h2>
 
