Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 <li>Logic-less templates with HTML5 and <a href="http://mustache.github.io/">Mustache</a>
 </li>
 <li>Dereferenceable URIs</li>
+<li>Content negotiation</li>
 </ul><h2>
 <a name="quick-start-with-activator" class="anchor" href="#quick-start-with-activator"><span class="octicon octicon-link"></span></a>Quick start with Activator</h2>
 
